@@ -1,6 +1,8 @@
 v3.7.16 (XXXX-XX-XX)
 --------------------
 
+* Fuerte: don't fall back to identity encoding in case of unknown encoding.
+
 * Fixed ES-881: Fixed LDAP global options. This needs to use the first active
   provider, not just the first provider and it should be globally disabled.
 
